--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Welcome to CalvinWi's homepage!
+description: This page is part of an eportfolio I am creating for a college assignment.
