--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
 title: Welcome to CalvinWi's homepage!
-description: This portfolio was made as part of a college assignment and as a means to market myself to potential empoloyers.
+description: This portfolio was made as part of a college assignment and as a means to market myself to potential employers.
